--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test:watch": "jest --watch",
     "cypress:open": "cypress open",
     "cypress:headless": "cypress run",
-    "docz:dev": "docz dev",
-    "docz:build": "docz build"
+    "docs:dev": "docz dev",
+    "docs:build": "docz build"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
